--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -4,4 +4,24 @@
   align-items: center;
 }
 
-
+.search-dropdown {
+  position: absolute;
+  top: 3.5rem;
+  padding: 1rem;
+  box-shadow:
+    0 1px 2px rgba(0, 0, 0, 0.1),
+    0 1px 3px rgba(0, 0, 0, 0.08);
+  border: 1px solid #ccc;
+  background-color: white;
+  color: black;
+  width: 100%;
+  border-radius: 0.75rem;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  z-index: 50;
+  overflow-y: scroll;
+  max-height: 300px;
+}
